packages/sycamore-macro/tests/view/element-fail.stderr
error: unexpected end of input, expected either `(` or `{` after element tag
 --> tests/view/element-fail.rs:5:26
  |
5 |         let _: View<G> = view! { cx, button };
  |                          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::view_with_elements` which comes from the expansion of the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `=`
 --> tests/view/element-fail.rs:6:53
  |
6 |         let _: View<G> = view! { cx, button(disabled) };
  |                                                     ^

error: expected `=`
 --> tests/view/element-fail.rs:7:53
  |
7 |         let _: View<G> = view! { cx, button(on:click) };
  |                                                     ^

error: expected `=`
 --> tests/view/element-fail.rs:8:58
  |
8 |         let _: View<G> = view! { cx, button(prop:disabled) };
  |                                                          ^

error: unknown directive `unknown`
 --> tests/view/element-fail.rs:9:45
  |
9 |         let _: View<G> = view! { cx, button(unknown:directive="123") };
  |                                             ^^^^^^^

error: expected `=`
  --> tests/view/element-fail.rs:13:46
   |
13 |         let _: View<G> = view! { cx, button(a.b.c="123") };
   |                                              ^

error: children and dangerously_set_inner_html cannot be both set
  --> tests/view/element-fail.rs:16:15
   |
16 |             p(dangerously_set_inner_html="<span>Test</span>") {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `unknownelement` in module `$crate::web::html`
  --> tests/view/element-fail.rs:10:38
   |
10 |         let _: View<G> = view! { cx, unknownelement {} };
   |                                      ^^^^^^^^^^^^^^ not found in `$crate::web::html`

error[E0425]: cannot find value `unknown_attributes` in this scope
  --> tests/view/element-fail.rs:11:44
   |
11 |         let _: View<G> = view! { cx, div(..unknown_attributes) {} };
   |                                            ^^^^^^^^^^^^^^^^^^ not found in this scope
